# accel-stream

./: CMakeLists.txt
include/accel/: stream
tests/: CMakeLists.txt  stream-tests.cpp
